namespace SampleApp.UI;

public class Class1
{

}
